# tpm-emulator-svn

./: AUTHORS  ChangeLog  Makefile  README  TODO  linux_module.c  linux_module.h  tpm_emu.c  tpm_emulator_config.h  tpm_version.h
crypto/: bn.c  bn.h  gmp_kernel_wrapper.c  hmac.c  hmac.h  rc4.c  rc4.h  rsa.c  rsa.h  sha1.c  sha1.h
htdocs/: documentation.html  downloads.html  index.html  links.html  maillist.html
htdocs/css/: style.css
htdocs/old/: documentation.html  downloads.html  index.html  maillist.html
htdocs/old/css/: style.css
htdocs/old/devimages/: TPMLogo.psd
htdocs/old/raw/: Makefile  config  config.macros  documentation.raw  links.raw  maillist.raw  wpp
htdocs/old/raw/templates/: head.tmpl
htdocs/raw/: README  documentation.raw  downloads.raw  index.raw  maillist.raw  wpp
htdocs/raw/templates/: head.tmpl  tail.tmpl
paper/: TRUST2008.tex  TRUST2008_slides.tex  biblio.bib  ethlogo_black.eps  tpm_emulator_paper.tex  uniklogo.eps
paper/figures/: system_overview.eps  system_overview.fig  tpm_command_structure.eps  tpm_command_structure.fig
paper/plots/: compliance.eps  compliance_key.eps  compliance_plots.gnuplot  data_extend.txt  data_self_test.txt  duration_extend.eps  duration_self_test.eps  execution_time.data  execution_time2.data  performance_comparison.eps  performance_comparison2.eps  performance_plots.gnuplot  tpm_compliance.txt
tags/tpm_emulator_0.1/: Makefile
tags/tpm_emulator_0.1/crypto/: bn.c  hmac.h  rc4.c  rc4.h  rsa.h
tags/tpm_emulator_0.1/tpm/: tpm_cmd_handler.c  tpm_commands.h  tpm_counter.c  tpm_crypto.c  tpm_daa.c  tpm_data.c  tpm_data.h  tpm_delegation.c  tpm_deprecated.c  tpm_emulator.h  tpm_error.c  tpm_eviction.c  tpm_handles.c  tpm_handles.h  tpm_maintenance.c  tpm_marshalling.c  tpm_nv_storage.c  tpm_structures.h  tpm_testing.c  tpm_ticks.c  tpm_version.h
tpm/: tpm_audit.c  tpm_authorization.c  tpm_capability.c  tpm_cmd_handler.c  tpm_commands.h  tpm_context.c  tpm_counter.c  tpm_credentials.c  tpm_crypto.c  tpm_daa.c  tpm_data.c  tpm_data.h  tpm_deprecated.c  tpm_emulator.h  tpm_error.c  tpm_eviction.c  tpm_gpio.c  tpm_handles.c  tpm_handles.h  tpm_identity.c  tpm_integrity.c  tpm_maintenance.c  tpm_management.c  tpm_marshalling.c  tpm_marshalling.h  tpm_migration.c  tpm_nv_storage.c  tpm_owner.c  tpm_startup.c  tpm_storage.c  tpm_structures.h  tpm_testing.c  tpm_ticks.c  tpm_transport.c
trunk/: CMakeLists.txt  ChangeLog  Makefile  README  TODO  build.bat  build.sh  config.h  config.h.in
trunk/crypto/: CMakeLists.txt  bn.c  bn.h  gmp_kernel_wrapper.c  hmac.c  hmac.h  rc4.c  rc4.h  rsa.c  rsa.h  sha1.c  sha1.h
trunk/mtm/: CMakeLists.txt  mtm_capability.c  mtm_structures.h
trunk/tddl/: CMakeLists.txt  Makefile  tddl.c  tddl_windows.h  test_tddl.c
trunk/tddl/unix/: CMakeLists.txt  Makefile  tddl.c  tddl.h  test_tddl.c
trunk/tddl/windows/: CMakeLists.txt
trunk/tpm/: CMakeLists.txt  tpm_audit.c  tpm_authorization.c  tpm_capability.c  tpm_cmd_handler.c  tpm_commands.h  tpm_context.c  tpm_counter.c  tpm_credentials.c  tpm_crypto.c  tpm_daa.c  tpm_data.c  tpm_data.h  tpm_delegation.c  tpm_deprecated.c  tpm_emulator.h  tpm_emulator_extern.c  tpm_emulator_extern.h  tpm_error.c  tpm_eviction.c  tpm_handles.c  tpm_handles.h  tpm_identity.c  tpm_integrity.c  tpm_maintenance.c  tpm_management.c  tpm_marshalling.c  tpm_marshalling.h  tpm_migration.c  tpm_nv_storage.c  tpm_owner.c  tpm_startup.c  tpm_storage.c  tpm_structures.h  tpm_testing.c  tpm_ticks.c  tpm_transport.c
trunk/tpm_dev/: Makefile  linux_module.c
trunk/tpm_dev/crypto/: bn.h  sha1.c  sha1.h
trunk/tpm_dev/tpm/: tpm_audit.c  tpm_authorization.c  tpm_capability.c  tpm_context.c  tpm_credentials.c  tpm_identity.c  tpm_integrity.c  tpm_management.c  tpm_marshalling.h  tpm_migration.c  tpm_owner.c  tpm_startup.c  tpm_storage.c  tpm_transport.c
trunk/tpmd/: Makefile  tpm_emulator_config.h  tpmd.c
trunk/tpmd/unix/: CMakeLists.txt  tpmd.c
trunk/tpmd/windows/: CMakeLists.txt  control_tpmd.bat  tpmd.c
trunk/tpmd_dev/: CMakeLists.txt  Makefile  tpmd_dev.c
trunk/tpmd_dev/darwin/: Info.plist  Makefile  tpm_bridge.c
trunk/tpmd_dev/darwin/tpm_bridge.xcodeproj/: project.pbxproj
trunk/tpmd_dev/linux/: Makefile  tpmd_dev.c  tpmd_dev.rules.in
trunk/tpmd_dev/openbsd/: tpmd_dev.c  tpmd_dev.h
trunk/tpmd_dev_openbsd/: Makefile  tpmd_dev.h
trunk/tpmd_lkm/: Makefile  tpmd_dev.c
trunk/tpmd_lkm/darwin/: Makefile
trunk/tpmd_lkm/linux/: tpmd_dev.c
trunk/tpmd_lkm/openbsd/: Makefile  tpmd_dev.c  tpmd_dev.h
